--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "npx tsc",
     "start": "npx ts-node src/index.ts",
-    "watch": "nodemon src/index.ts",
+    "watch": "npx ts-node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
