--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,17 +5,19 @@
   "scripts": {
     "build": "npx tsc",
     "start": "npx ts-node src/index.ts",
-    "watch": "npx ts-node .",
+    "watch": "npx nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.20.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.4",
     "nodemon": "^3.1.4",
