change projects formatting

--- a/back-end/static/projects.json
+++ b/back-end/static/projects.json
@@ -10,7 +10,7 @@
         "linkText": "Ivalu",
         "linkUrl": "https://ivalu.nsbsd.org",
         "sourceUrl": null,
-        "body": "A web application designed to help the Iñupiat people in Alaska preserve their native language. Uses C# Blazor, ASP.NET, and MySql.",
+        "body": "A web application designed to help the Iñupiat people in Alaska preserve their native language. Uses C# Blazor, ASP.NET, and MySql. First full-stack developer job position.",
         "imgUrl": null
     },
     {
