--- a/back-end/package.json
+++ b/back-end/package.json
@@ -12,14 +12,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/argon2": "^0.14.1",
+    "argon2": "^0.41.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.20.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.5.4",
     "@types/nodemailer": "^6.4.15",
     "nodemon": "^3.1.4",
